--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,11 @@
 <form action="/names" method="post">
   <div>
-    <label for="player1">Player 1:</label>
-    <input type="text" name="player1"/>
+    <label for="player_1_name">Player 1 Name:</label>
+    <input type="text" name="player_1_name"/>
   </div>
   <div>
-    <label for="player2">Player 2:</label>
-    <input type="text" name="player2"/>
+    <label for="player_2_name">Player 2 Name:</label>
+    <input type="text" name="player_2_name"/>
   </div>
   <div>
     <input type="submit" value="Submit"/>
