--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,1 @@
-Welcome <%= @player1 %> and <%= @player2 %>.
+Weep, <%= @player_1_name %> and <%= @player_2_name %>. The old gods are thirsty for your tears!
