--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,4 @@
-Weep, <%= @player_1_name %> and <%= @player_2_name %>. The old gods are thirsty for your tears!
+<h1>Weep, <%= @player_1_name %> and <%= @player_2_name %>. The old gods are thirsty for your tears!</h1>
+
+<div><%= @player_2_name %> HP: <%= Battle::PLAYER_2_HP %></div>
+
