--- a/views/index.erb
+++ b/views/index.erb
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="main.css" type="text/css" />
-    <link rel="stylesheet" href="index.css" type="text/css" />
-    <title>Battle</title>
+    <link rel="stylesheet" href="style/main.css" type="text/css" />
+    <link rel="stylesheet" href="style/index.css" type="text/css" />
+    <title>FINAL FANTASY XV</title>
   </head>
 
   <body>
     <div class="main">
       <div class="title">
-        <span>
         <h1 id="title">FINAL FANTASY XV</h1>
-      </span>
       </div>
       <div class="form">
-        <form action="/character-select" method="get">
+        <form action="/start-game" method="post">
           <input type="submit" value ="Start" id="start-button"/>
         </form>
       </div>
     </div>
-
+    <div>
+      <iframe width="1" height="1" src="https://www.youtube.com/embed/xCQdWqO6Mfc?rel=0&amp;controls=0&amp;showinfo=0&amp;&autoplay=1" frameborder="0" allowfullscreen></iframe>
+    </div>
   </body>
-
 </html>
