--- a/public/style/character_select.css
+++ b/public/style/character_select.css
@@ -19,7 +19,7 @@ h2 {
 }
 
 form {
-  width: 1750px;
+  width: 1000px;
   margin: auto;
   padding: 10px;
 }
@@ -36,10 +36,13 @@ form {
   margin-right: 200px
 }
 
+.submit {
+  width: 100px;
+  margin: auto;
+}
+
 #submit_button {
     background-color: #CCC;
-    opacity: 1
-    border: none;
     color: black;
     padding: 15px 32px;
     text-align: center;
